Readme updated with all tasks to be performed in this project

--- a/clustering.ipynb
+++ b/clustering.ipynb
@@ -20,7 +20,10 @@
    },
    "source": [
     "import pandas as pd\n",
-    "import sqlite3"
+    "import sqlite3\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.cluster import KMeans"
    ],
    "outputs": [],
    "execution_count": 44
@@ -40,10 +43,18 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "df_pp_attributes.head()",
+   "source": "df_pp_attributes.head(3)",
    "id": "54f4f3b5826fb8b2",
    "outputs": [],
    "execution_count": 47
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "15d1a5908d00d4d5"
   }
  ],
  "metadata": {
