Chose 4 features ['crossing', 'finishing', 'dribbling', 'long_passing'] and scaled the data

--- a/clustering.ipynb
+++ b/clustering.ipynb
@@ -23,7 +23,8 @@
     "import sqlite3\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.cluster import KMeans"
+    "from sklearn.cluster import KMeans\n",
+    "from  sklearn.preprocessing import StandardScaler"
    ],
    "outputs": [],
    "execution_count": 44
@@ -33,7 +34,7 @@
    "cell_type": "code",
    "source": [
     "conn = sqlite3.connect('database.sqlite')\n",
-    "df_pp_attributes = pd.read_sql('SELECT * FROM Player p JOIN Player_Attributes pa ON p.player_api_id = pa.player_api_id', conn)\n",
+    "df_pp_attributes = pd.read_sql('SELECT pa.crossing AS crossing, pa.finishing AS finishing, pa.dribbling as dribbling, pa.long_passing AS long_passing FROM Player p JOIN Player_Attributes pa ON p.player_api_id = pa.player_api_id', conn)\n",
     "conn.close()"
    ],
    "id": "2d01172b6185c2c",
@@ -53,7 +54,26 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "",
+   "source": [
+    "# Scale the data\n",
+    "features = ['crossing', 'finishing', 'dribbling', 'long_passing']\n",
+    "scaler =  StandardScaler()\n",
+    "df_pp_attributes_scaled = scaler.fit_transform(df_pp_attributes[features])"
+   ],
+   "id": "2db97855412ea9f6"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# kmeans = KMeans(n_clusters=3).fit(df_pp_attributes)\n",
+    "# centroids = kmeans.cluster_centers_\n",
+    "# print(centroids)\n",
+    "# \n",
+    "# print(kmeans.labels_)"
+   ],
    "id": "15d1a5908d00d4d5"
   }
  ],
