fit the data into K_Means and performed dimensionality reduction using PCA

--- a/clustering.ipynb
+++ b/clustering.ipynb
@@ -23,6 +23,7 @@
     "import sqlite3\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "from sklearn.decomposition import PCA\n",
     "from sklearn.cluster import KMeans\n",
     "from  sklearn.preprocessing import StandardScaler"
    ],
@@ -33,6 +34,7 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
+    "# Get the data from the database\n",
     "conn = sqlite3.connect('database.sqlite')\n",
     "df_pp_attributes = pd.read_sql('SELECT pa.crossing AS crossing, pa.finishing AS finishing, pa.dribbling as dribbling, pa.long_passing AS long_passing FROM Player p JOIN Player_Attributes pa ON p.player_api_id = pa.player_api_id', conn)\n",
     "conn.close()"
@@ -68,12 +70,39 @@
    "outputs": [],
    "execution_count": null,
    "source": [
-    "# kmeans = KMeans(n_clusters=3).fit(df_pp_attributes)\n",
-    "# centroids = kmeans.cluster_centers_\n",
-    "# print(centroids)\n",
-    "# \n",
-    "# print(kmeans.labels_)"
+    "kmeans = KMeans(n_clusters=3, random_state=0)\n",
+    "df_pp_attributes['cluster'] = kmeans.fit_predict(df_pp_attributes_scaled)"
    ],
+   "id": "ff2c7bee9eacfc3d"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "# Map clusters to the categories to know which cluster represents which category ('Good', 'Intermediate', and 'Bad') in order to label the clusters and color them\n",
+   "id": "fa410b6a2a7670fb"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# Perform dimensionality reduction using PCA in order to visualize the clusters in 2D\n",
+    "pca = PCA(n_components=2)\n",
+    "df_pp_attributes_pca = pca.fit_transform(df_pp_attributes_scaled)\n",
+    "df_pp_attributes['PCA1'] = df_pp_attributes_pca[:, 0]\n",
+    "df_pp_attributes['PCA2'] = df_pp_attributes_pca[:, 1]"
+   ],
+   "id": "8460e41d246828cd"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
    "id": "15d1a5908d00d4d5"
   }
  ],
