Visualization added using scatter plot to visualize the clusters using PCA

--- a/clustering.ipynb
+++ b/clustering.ipynb
@@ -102,6 +102,23 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
+   "source": [
+    "# Visualize the scatter plot\n",
+    "plt.figure(figsize=(10, 7))\n",
+    "plt.scatter(df_pp_attributes['PCA1'], df_pp_attributes['PCA2'], c=df_pp_attributes['cluster'], cmap='viridis', marker='o')\n",
+    "plt.xlabel('PCA1')\n",
+    "plt.ylabel('PCA2')\n",
+    "plt.title('Best Player using PCA1 and PCA2')\n",
+    "plt.colorbar()\n",
+    "plt.show()"
+   ],
+   "id": "c6121c18d1f355be"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": "",
    "id": "15d1a5908d00d4d5"
   }
