using predict to predict the category of the new data

--- a/clustering.ipynb
+++ b/clustering.ipynb
@@ -161,6 +161,7 @@
    },
    "cell_type": "code",
    "source": [
+    "# Fit the data in Kmeans\n",
     "kmeans = KMeans(n_init='auto', n_clusters=3, random_state=0)\n",
     "df_pp_attributes['cluster'] = kmeans.fit_predict(df_pp_attributes_scaled)"
    ],
@@ -233,8 +234,8 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "",
-   "id": "15d1a5908d00d4d5"
+   "source": "# Bringing new data to predict the correspondent category\n",
+   "id": "cdad4789f4df4314"
   }
  ],
  "metadata": {
